<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ffff"
    android:orientation="vertical"
    android:padding="25dp"
    android:gravity="center_vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/img"
        android:contentDescription="@string/DescImage" />
    <EditText
        android:id="@+id/LoginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintUsername"
        android:inputType="text"
        android:importantForAutofill="no"
        android:layout_marginTop="15dp"/>
    <EditText
        android:id="@+id/LoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintPassword"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:layout_marginTop="15dp"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textLogin"
        android:layout_marginTop="25dp"/>
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textSignUp"
        android:backgroundTint="#cccc"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textForgot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textForgot"
            android:layout_weight="4"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/textSMS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textSMS"
            android:layout_weight="6"
            android:textSize="20sp"
            android:gravity="right"/>
    </LinearLayout>

</LinearLayout>