<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SMSPhone"
    android:background="#ffff"
    android:orientation="vertical"
    android:padding="25dp"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textSMS"
        android:gravity="center"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textAllCaps="true"/>
    <EditText
        android:id="@+id/textPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintPhone"
        android:inputType="phone"
        android:importantForAutofill="no"
        android:layout_marginTop="15dp"/>
    <Button
        android:id="@+id/btnGetOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textOTP"
        android:layout_marginTop="15dp"/>
    <EditText
        android:id="@+id/textOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintOTP"
        android:inputType="text"
        android:importantForAutofill="no"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textLogin"
        android:layout_marginTop="15dp"/>

</LinearLayout>